경고문 수정